--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 function loadGame()
 {
-    window.location.href = "../game/game.html";
+    window.open('https://fernando2025a.github.io/game/');
 
 }
     </script>
